NetBSD Problem Report #47058

From www@NetBSD.org  Thu Oct 11 19:27:12 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 8C9EC63E407
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 11 Oct 2012 19:27:12 +0000 (UTC)
Message-Id: <20121011192711.8783D63E3BF@www.NetBSD.org>
Date: Thu, 11 Oct 2012 19:27:11 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: ip6flow_fastforward() is broken for non-aligned ip headers
X-Send-Pr-Version: www-1.0

>Number:         47058
>Category:       kern
>Synopsis:       ip6flow_fastforward() is broken for non-aligned ip headers
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Oct 11 19:30:00 +0000 2012
>Closed-Date:    Sun Oct 06 12:57:54 +0000 2013
>Last-Modified:  Sun Oct 06 12:57:54 +0000 2013
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
In case of an unaligned IP6 header, ip6flow_fastforward() calls m_copyup() to get an aligned header.  It does not notify the caller of this, so if the mbuf is not processed by ip6flow_fastforward(), the caller will have lost a chunk of the mbuf chain.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47058 CVS commit: src/sys
Date: Thu, 11 Oct 2012 16:05:50 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Oct 11 20:05:50 UTC 2012

 Modified Files:
 	src/sys/net: if_atmsubr.c if_ethersubr.c if_fddisubr.c if_ppp.c
 	src/sys/netinet6: in6_var.h ip6_flow.c

 Log Message:
 PR/47058: Antti Kantee: If the ipv6 flow code modifies the mbuf, pass the
 change up to the caller.


 To generate a diff of this commit:
 cvs rdiff -u -r1.49 -r1.50 src/sys/net/if_atmsubr.c
 cvs rdiff -u -r1.191 -r1.192 src/sys/net/if_ethersubr.c
 cvs rdiff -u -r1.81 -r1.82 src/sys/net/if_fddisubr.c
 cvs rdiff -u -r1.136 -r1.137 src/sys/net/if_ppp.c
 cvs rdiff -u -r1.65 -r1.66 src/sys/netinet6/in6_var.h
 cvs rdiff -u -r1.19 -r1.20 src/sys/netinet6/ip6_flow.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47058 CVS commit: [netbsd-6] src/sys
Date: Wed, 31 Oct 2012 16:07:46 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Wed Oct 31 16:07:46 UTC 2012

 Modified Files:
 	src/sys/net [netbsd-6]: if_atmsubr.c if_ethersubr.c if_fddisubr.c
 	    if_ppp.c
 	src/sys/netinet6 [netbsd-6]: in6_var.h ip6_flow.c

 Log Message:
 Pull up following revision(s) (requested by christos in ticket #638):
 	sys/net/if_ppp.c: revision 1.137
 	sys/netinet6/ip6_flow.c: revision 1.20
 	sys/net/if_fddisubr.c: revision 1.82
 	sys/net/if_ethersubr.c: revision 1.192
 	sys/netinet6/in6_var.h: revision 1.66
 	sys/net/if_atmsubr.c: revision 1.50
 PR/47058: Antti Kantee: If the ipv6 flow code modifies the mbuf, pass the
 change up to the caller.


 To generate a diff of this commit:
 cvs rdiff -u -r1.49 -r1.49.10.1 src/sys/net/if_atmsubr.c
 cvs rdiff -u -r1.188.8.2 -r1.188.8.3 src/sys/net/if_ethersubr.c
 cvs rdiff -u -r1.81 -r1.81.14.1 src/sys/net/if_fddisubr.c
 cvs rdiff -u -r1.136 -r1.136.8.1 src/sys/net/if_ppp.c
 cvs rdiff -u -r1.64 -r1.64.20.1 src/sys/netinet6/in6_var.h
 cvs rdiff -u -r1.19 -r1.19.2.1 src/sys/netinet6/ip6_flow.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 06 Oct 2013 12:57:54 +0000
State-Changed-Why:
christos committed it last year


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.