PR/47058: Antti Kantee: If the ipv6 flow code modifies the mbuf, pass the change up to the caller.