sys/net/if_fddisubr.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: if_fddisubr.c,v 1.81 2010/04/05 07:22:23 joerg Exp $	*/
+/*	$NetBSD: if_fddisubr.c,v 1.82 2012/10/11 20:05:50 christos Exp $	*/
 
 /*
  * Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -96,7 +96,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: if_fddisubr.c,v 1.81 2010/04/05 07:22:23 joerg Exp $");
+__KERNEL_RCSID(0, "$NetBSD: if_fddisubr.c,v 1.82 2012/10/11 20:05:50 christos Exp $");
 
 #include "opt_gateway.h"
 #include "opt_inet.h"
@@ -648,7 +648,7 @@ fddi_input(struct ifnet *ifp, struct mbuf *m)
 #ifdef INET6
 		case ETHERTYPE_IPV6:
 #ifdef GATEWAY  
-			if (ip6flow_fastforward(m))
+			if (ip6flow_fastforward(&m))
 				return;
 #endif
 			schednetisr(NETISR_IPV6);
