sys/netinet6/in6_var.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: in6_var.h,v 1.65 2012/06/23 03:14:03 christos Exp $	*/
+/*	$NetBSD: in6_var.h,v 1.66 2012/10/11 20:05:50 christos Exp $	*/
 /*	$KAME: in6_var.h,v 1.81 2002/06/08 11:16:51 itojun Exp $	*/
 
 /*
@@ -703,7 +703,7 @@ int	in6_are_prefix_equal(struct in6_addr *, struct in6_addr *, int);
 void	in6_prefixlen2mask(struct in6_addr *, int);
 void	in6_purgeprefix(struct ifnet *);
 
-int	ip6flow_fastforward(struct mbuf *); /* IPv6 fast forward routine */
+int	ip6flow_fastforward(struct mbuf **); /* IPv6 fast forward routine */
 
 int in6_src_ioctl(u_long, void *);
 int	in6_is_addr_deprecated(struct sockaddr_in6 *);
